Full rework of pre-game interface and networking
New features for players:
* Loading for multiplayer. Any save could be used for multiplayer.
* Restart for multiplayer. All clients will restart together.
* Loading from single save.
* Hotseat mixed with network game. Multiple players per client.
* Now connection to server could be cancelled.
* Return to menu on disconnections instead of crashes.
* Restoring of last selected map, save or campaign on next run.

TLDR on important changes in engine code:
* UI: work with server separated from UI
* UI: all explitic blitting replaced with IntObject's
* UI: all new code use smart pointers instead of DISPOSE
* Gameplay always start through lobby controlled by server.
* Threads receiving netpacks now shared for lobby and gameplay.
* Campaigns: heroes for crossover now serialized as JsonNode.

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -74,7 +74,7 @@ set(lib_SRCS
 		registerTypes/TypesMapObjects1.cpp
 		registerTypes/TypesMapObjects2.cpp
 		registerTypes/TypesMapObjects3.cpp
-		registerTypes/TypesPregamePacks.cpp
+		registerTypes/TypesLobbyPacks.cpp
 		registerTypes/TypesServerPacks.cpp
 
 		rmg/CMapGenerator.cpp
@@ -152,6 +152,7 @@ set(lib_SRCS
 		JsonNode.cpp
 		LogicalExpression.cpp
 		NetPacksLib.cpp
+		StartInfo.cpp
 		ResourceSet.cpp
 		VCMIDirs.cpp
 		VCMI_Lib.cpp
@@ -336,6 +337,7 @@ set(lib_HEADERS
 		LogicalExpression.h
 		NetPacksBase.h
 		NetPacks.h
+		NetPacksLobby.h
 		ResourceSet.h
 		ScopeGuard.h
 		StartInfo.h
